syntax = "proto3";

package ingestor.v1;

option go_package = "github.com/prathamesh/log-aggregation-system/api/ingestor/v1;ingestorv1";

// LogEvent represents a single log entry
message LogEvent {
  string tenant_id = 1;        // Required: tenant identifier
  string service = 2;          // Required: service name
  string host = 3;             // Required: hostname or instance
  int64 timestamp = 4;         // Required: event timestamp (epoch ms)
  string level = 5;            // Required: DEBUG|INFO|WARN|ERROR
  string message = 6;          // Required: log message
  map<string, string> labels = 7;  // Optional: additional key-value labels
  string trace_id = 8;         // Optional: distributed trace ID
  int64 ingestion_time = 9;    // Set by ingestor (epoch ms)
}

// IngestRequest for batch ingestion
message IngestRequest {
  repeated LogEvent events = 1;
}

// IngestResponse acknowledgement
message IngestResponse {
  int32 accepted_count = 1;
  int32 rejected_count = 2;
  string last_error = 3;        // Optional: last error message
}

// StreamAck for streaming acknowledgement
message StreamAck {
  int32 accepted_count = 1;
  int32 rejected_count = 2;
  string last_error = 3;
}

// Ingestor service definition
service IngestorService {
  // Stream logs from clients (bi-directional streaming)
  rpc StreamLogs(stream LogEvent) returns (StreamAck);

  // Batch ingest logs (for REST gateway or high-throughput clients)
  rpc IngestBatch(IngestRequest) returns (IngestResponse);

  // Health check
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;  // "healthy" or "unhealthy"
  string message = 2;
}
